tests/negative/import1_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

foo:
  print "foo import"
